--- a/LyricSearch/Config/Info.plist
+++ b/LyricSearch/Config/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<string>spotify</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>dnewberr-lyric-search</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.dnewberr.lyric-search</string>
+		</dict>
+	</array>
 	<key>MUSIX_MATCH_API_KEY</key>
 	<string>$(MUSIX_MATCH_API_KEY)</string>
 	<key>CFBundleName</key>
