--- a/LyricSearch/Config/Info.plist
+++ b/LyricSearch/Config/Info.plist
@@ -4,19 +4,21 @@
 <dict>
 	<key>SPOTIFY_CLIENT_ID</key>
 	<string>$(SPOTIFY_CLIENT_ID)</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<string>spotify</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>dnewberr-lyric-search</string>
-			</array>
-			<key>CFBundleURLName</key>
-			<string>com.dnewberr.lyric-search</string>
-		</dict>
-	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>spotify</string>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>dnewberr-lyric-search</string>
+            </array>
+            <key>CFBundleURLName</key>
+            <string>com.dnewberr.LyricSearch</string>
+        </dict>
+    </array>
 	<key>MUSIX_MATCH_API_KEY</key>
 	<string>$(MUSIX_MATCH_API_KEY)</string>
 	<key>CFBundleName</key>
@@ -62,5 +64,10 @@
 	<string>6.0</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
