--- a/LyricSearch/Config/Info.plist
+++ b/LyricSearch/Config/Info.plist
@@ -2,23 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>RAPID_API_KEY</key>
+	<string>$(RAPID_API_KEY)</string>
 	<key>SPOTIFY_CLIENT_ID</key>
 	<string>$(SPOTIFY_CLIENT_ID)</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>spotify</string>
-    </array>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>dnewberr-lyric-search</string>
-            </array>
-            <key>CFBundleURLName</key>
-            <string>com.dnewberr.LyricSearch</string>
-        </dict>
-    </array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>spotify</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>dnewberr-lyric-search</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.dnewberr.LyricSearch</string>
+		</dict>
+	</array>
 	<key>MUSIX_MATCH_API_KEY</key>
 	<string>$(MUSIX_MATCH_API_KEY)</string>
 	<key>CFBundleName</key>
@@ -64,10 +66,10 @@
 	<string>6.0</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
